--- a/build.gradle
+++ b/build.gradle
@@ -66,3 +66,18 @@ android {
 task jar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
 }
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives sourcesJar
+    archives javadocJar
+}
