--- a/build.gradle
+++ b/build.gradle
@@ -63,21 +63,65 @@ android {
     }
 }
 
+android.libraryVariants.all { variant ->
+    def name = variant.buildType.name
+    if (name.equals(com.android.builder.core.BuilderConstants.DEBUG)) {
+        return; // Skip debug builds.
+    }
+    def task = project.tasks.create "jar${name.capitalize()}", Jar
+    task.dependsOn variant.javaCompile
+    task.from variant.javaCompile.destinationDir
+    artifacts.add('archives', task);
+}
+
+android.libraryVariants.all { variant ->
+    task("generate${variant.name.capitalize()}Javadoc", type: Javadoc) {
+        description "Generates Javadoc for $variant.name."
+        source = variant.javaCompile.source
+        ext.androidJar = "${android.sdkDirectory}/platforms/${android.compileSdkVersion}/android.jar"
+        classpath = files(variant.javaCompile.classpath.files) + files(ext.androidJar)
+        options.links("http://docs.oracle.com/javase/7/docs/api/");
+        options.links("http://d.android.com/reference/");
+        exclude '**/BuildConfig.java'
+        exclude '**/R.java'
+    }
+    task("bundle${variant.name.capitalize()}Javadoc", type: Jar) {
+        description "Bundles Javadoc into zip for $variant.name."
+        classifier = "javadoc"
+        from tasks["generate${variant.name.capitalize()}Javadoc"]
+    }
+}
+
 task jar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
 }
 
-task sourcesJar(type: Jar, dependsOn: classes) {
+task androidSourcesJar(type: Jar) {
     classifier = 'sources'
-    from sourceSets.main.allSource
+    from android.sourceSets.main.java.srcDirs
 }
 
+artifacts {
+    archives androidSourcesJar
+}
+
+
+/*
+task sourcesJar(type: Jar) {
+    classifier = 'sources'
+    from android.sourceSets.main.java.srcDirs
+}
+*/
+
+/*
 task javadocJar(type: Jar, dependsOn: javadoc) {
     classifier = 'javadoc'
     from javadoc.destinationDir
 }
-
+*/
+/*
 artifacts {
     archives sourcesJar
-    archives javadocJar
+    //archives javadocJar
 }
+*/
